2002-05-08  Roland McGrath  <roland@frob.com>

	* portinfo.c (print_port_info): Use %z formats for port names.
	* xportinfo.c (print_xlated_port_info): Likewise.

	* idvec-verify.c (verify_passwd): Cast to intptr_t before int.

	* idvec-auth.c (idvec_merge_auth): int -> size_t.

	* portxlate.c (port_name_xlator_xlate): Use mach_msg_type_name_t
	instead of mach_port_type_t, to match RPC prototype.

	* wire.c: Use ElfW(TYPE) in place of Elf32_TYPE throughout.

2002-02-06  Roland McGrath  <roland@frob.com>

	* Makefile (CFLAGS): Don't add -DHAVE_LINEWRAP_H -DHAVE_CTHREADS_H.

2001-06-24  Mark Kettenis  <kettenis@gnu.org>

	* idvec-impgids.c (_merge_implied_gids) [HAVE_GETGROUPLIST]:
	Conditionally enable code that calls getgrouplist.  Use `int'
	instead of `size_t' for number of groups.
	[!HAVE_GETGROUPLIST]: Add #warning about missing getgrouplist.

2001-03-31  Roland McGrath  <roland@frob.com>

	* ugids.h: Fix obsolescent #endif syntax.

2001-03-29  Neal H Walfield  <neal@cs.uml.edu>

        * idvec-auth.c (idvec_merge_auth): Really allow parameters
        to be NULL.

2001-02-25  Roland McGrath  <roland@frob.com>

	* idvec.h: Include <string.h> for memcmp decl.

	* wire.c (map_extent): Add dead return stmt to silence gcc warning.

2001-02-20  Marcus Brinkmann  <marcus@gnu.org>

	* timefmt.c: Include <time.h>.  Reported by Arkadi E. Shishlov
	<arkadi@it.lv>.

2000-10-30  Marcus Brinkmann  <marcus@gnu.org>

	* wire.c: Include <error.h>.

2000-10-29  Roland McGrath  <roland@frob.com>

	* wire.c (map_extent): Pass second arg of RTLD_NOLOAD to dlopen.
	(RTLD_NOLOAD): Define macro to zero if undefined.

	* wire.c (map_extent): Rewrite using dlsym on library's _end symbol.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* options.c, options.h: Ancient unused files removed.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* exec-reauth.c (exec_reauth): Always destroy REF, even when we
	get errors.

2000-01-29  Roland McGrath  <roland@baalperazim.frob.com>
