@@ -1,3 +1,8 @@
+2002-05-12  Marcus Brinkmann  <marcus@gnu.org>
+
+	* idvec-impgids.c (_merge_implied_gids): Free CACHE on failure.
+	Submitted by Neal H Walfield <neal@cs.uml.edu>.
+
 2002-05-08  Roland McGrath  <roland@frob.com>
 
 	* portinfo.c (print_port_info): Use %z formats for port names.
